--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
         <li>
           <a
             class="links"
-            href="https://discord.com/channels/@me"
-            target="_blank"
+            href="https://www.discord.com/users/704705007047671858"
           >
             <img src="./images/discord.svg" alt="discord" />
           </a>
